[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = ">=4.12.3"
requests-html = ">=0.10.0"
requests = ">=2.32.3"
selenium = ">=4.27.1"
flask = ">=3.1.0"
flask-socketio = ">=5.5.1"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"
